# PySPQR

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  cffi_asarray.py  pyproject.toml  setup.py  spqr.py  spqr_gen.py
.github/workflows/: python-package.yml
sparseqr/: __init__.py  cffi_asarray.py  sparseqr.py  sparseqr_gen.py  spqr.py  spqr_gen.py
test/: test.py  test_complex.py  test_sparseqr.py
