[tool.poetry]
name = "sparseqr"
version = "1.1.2"
description = "Python wrapper for SuiteSparseQR"
authors = ["Yotam Gingold <yotam@yotamgingold.com>", "Juha Jeronen <juha.jeronen@tut.fi>"]
license = "Public Domain CC0"

include = ["test/*.py", "README.md", "LICENSE.md"]
exclude = ["sparseqr/_sparseqr*"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.21"
scipy = "^1.0"
cffi = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
