[project]
name = "sparseqr"
version = "1.4.1"
description = "Python wrapper for SuiteSparseQR"
authors = [{name = "Yotam Gingold", email = "yotam@yotamgingold.com"}]
license = {text = "Public Domain CC0"}
readme = "README.md"
keywords = ["suitesparse", "bindings", "wrapper", "scipy", "numpy", "qr-decomposition", "qr-factorisation", "sparse-matrix", "sparse-linear-system", "sparse-linear-solver"]

requires-python = ">= 3.8"

dependencies = [
    "numpy >1.2",
    "scipy >= 1.0",
    "cffi >= 1.0",
    "setuptools >35",
]

[project.urls]
homepage = "https://github.com/yig/PySPQR"
source = "https://github.com/yig/PySPQR"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

#[tool.setuptools.packages.find]
# include = ["test/*.py", "README.md", "LICENSE.md"]
#exclude = ["sparseqr/_sparseqr*"]
